--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,9 @@
-{    "liveSassCompile.settings.formats": [
-    
-
-  {
+{    
+  "liveSassCompile.settings.formats": [
+    {
       "format":"expanded",
       "extensionName": ".css",
       "savePath": "/src/css"
-  }
-],
-
+    }
+  ],
 }
