--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,9 @@
 {    
-  "liveSassCompile.settings.formats": [
-    {
-      "format":"expanded",
-      "extensionName": ".css",
-      "savePath": "/src/css"
-    }
-  ],
+  // "liveSassCompile.settings.formats": [
+  //   {
+  //     "format":"expanded",
+  //     "extensionName": ".css",
+  //     "savePath": "/src/css"
+  //   }
+  // ],
 }
